# ai-sdk-python-streaming

./: package.json  pyproject.toml
api/: index.py
api/utils/: prompt.py  tools.py
app/: layout.tsx
components/: chat.tsx  multimodal-input.tsx  navbar.tsx
